fixed currUser not showing in split text component

--- a/chatbot/src/app.scss
+++ b/chatbot/src/app.scss
@@ -342,7 +342,8 @@ body {
                 }
 
                 #settingsDiv button:hover {
-                    color: $mainBackgroundColor;
+                    font-weight: 300;
+                    transition: all .2s ease-in-out;
                 }
 
                 #navbarLogout button:hover {
